Regression: Specific Geometry Nodes tree (involving curve nodes) crashes with specific input mesh #102144

Closed
opened 2022-10-29 16:08:48 +02:00 by Will · 16 comments

System Information
Operating system: Linux
Graphics card: Intel

Blender Version
Broken: blender-3.3.1-linux-x64.tar.xz, blender-3.2.2-linux-x64, blender-3.2.1-linux-x64
Worked: blender-3.1.2-linux-x64, blender-3.2.0-alpha+master.95005bbe02cf-linux.x86_64-release

Apparently caused by 2d80f814cc

This is dependent both the specific node setup (mesh-to-curve, set-handle-type, set-spline-resolution [with a value of zero!] all seem to be necessary to trigger the bug) but the input mesh as well (simple plane crashes, but simple cube is fine

Exact steps for others to reproduce the error

GeomNodesCrash_simplified2.blend

  • open blend
  • Cube with enabled GN modifier
  • Plane with same GN modifier (disabled)
  • enable modifier on Plane >> crash
  • you can also extrude an edge from the Plane prior to enabling the modifier on the Plane >> no crash anymore

Original report

I have a project that always crashes when I try to load it in newer versions of Blender.
It has lots of drivers, modifiers, and procedural geometry.
The crash appears to be tied to a specific Geometry Nodes tree.

  1. Download the attached file:

GeomNodesCrash.blend

  1. Try to open it in one of the affected Blender versions.

  2. Observe crash.

If the file is opened in an unaffected version and the CRASH_CAUSING_NODEGROUP is completely removed from it (SHIFT+LMB on the Unlink "X"), then the crash does not happen.

Also: crash.txt:

crash.txt

gdb bt looks like it's saying the same things.

**System Information** Operating system: Linux Graphics card: Intel **Blender Version** Broken: `blender-3.3.1-linux-x64.tar.xz`, `blender-3.2.2-linux-x64`, `blender-3.2.1-linux-x64` Worked: `blender-3.1.2-linux-x64`, `blender-3.2.0-alpha+master.95005bbe02cf-linux.x86_64-release` Apparently caused by 2d80f814cc This is dependent both the specific node setup (mesh-to-curve, set-handle-type, set-spline-resolution [with a value of zero!] all seem to be necessary to trigger the bug) but the input mesh as well (simple plane crashes, but simple cube is fine **Exact steps for others to reproduce the error** [GeomNodesCrash_simplified2.blend](https://archive.blender.org/developer/F13831865/GeomNodesCrash_simplified2.blend) - open blend - `Cube` with enabled GN modifier - `Plane` with same GN modifier (disabled) - enable modifier on `Plane` >> crash - you can also extrude an edge from the Plane prior to enabling the modifier on the Plane >> no crash anymore **Original report** I have a project that always crashes when I try to load it in newer versions of Blender. It has lots of drivers, modifiers, and procedural geometry. The crash appears to be tied to a specific Geometry Nodes tree. 1. Download the attached file: [GeomNodesCrash.blend](https://archive.blender.org/developer/F13807033/GeomNodesCrash.blend) 2. Try to open it in one of the affected Blender versions. 3. Observe crash. If the file is opened in an unaffected version and the `CRASH_CAUSING_NODEGROUP` is completely removed from it (`SHIFT`+`LMB` on the Unlink "X"), then the crash does not happen. Also: `crash.txt`: [crash.txt](https://archive.blender.org/developer/F13797488/crash.txt) `gdb` `bt` looks like it's saying the same things.
Author

Added subscriber: @WCN

Added subscriber: @WCN

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Unfortunately the stack trace does not tell us much. We'll need a way to reproduce the issue in order to fix it. Is is possible to modify the original file in a way that is shareable? Replace geometry with simple primitives, remove textures entirely or replace with small, solid colors, textures?

Unfortunately the stack trace does not tell us much. We'll need a way to reproduce the issue in order to fix it. Is is possible to modify the original file in a way that is shareable? Replace geometry with simple primitives, remove textures entirely or replace with small, solid colors, textures?
Will changed title from Segfault loading file from 3.0.0. to Crash loading geometry nodes from 3.0.0. 2022-10-30 12:18:26 +01:00
Author

@deadpin Yeah, I find myself in this position often enough that I decided to write a quick script to mangle all the impactful data. File added.

Looks like a specific geometry nodes tree is causing the problem.

@deadpin Yeah, I find myself in this position often enough that I decided to write a quick script to mangle all the impactful data. File added. Looks like a specific geometry nodes tree is causing the problem.

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Potentially related.
#101972

Potentially related. #101972

But it will still be better if you can simplify the example file as much as possible.

But it will still be better if you can simplify the example file as much as possible.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Will confirm as I can reproduce the crash here as well. The stack is sufficiently different than the Spline bug so will keep this separate.

I won't have time today to bisect the issue; it seems to go very far back. Here is the Assert that happens with a Debug build because the result span is incorrect:

blender.exe!_BLI_assert_abort() Line 47	C
blender.exe!blender::bke::curves::bezier::evaluate_segment(..., blender::MutableSpan<blender::vec_base<float,3>> result) Line 212	C++
blender.exe!blender::bke::curves::bezier::calculate_evaluated_positions(..., blender::MutableSpan<blender::vec_base<float,3>> evaluated_positions) Line 254	C++
blender.exe!blender::bke::CurvesGeometry::evaluated_positions::__l2::<lambda_1>::()::__l2::<lambda_1>::operator()(blender::IndexRange curves_range) Line 686	C++
blender.exe!blender::threading::parallel_for<``blender::bke::CurvesGeometry::evaluated_positions'::`2'::<lambda_1>::operator()'::`2'::<lambda_1>>(...) Line 72	C++
blender.exe!blender::bke::CurvesGeometry::evaluated_positions::__l2::<lambda_1>::operator()() Line 663	C++
blender.exe!tbb::interface7::internal::delegated_function<`blender::bke::CurvesGeometry::evaluated_positions'::`2'::<lambda_1> const ,void>::operator()() Line 97	C++

Will confirm as I can reproduce the crash here as well. The stack is sufficiently different than the Spline bug so will keep this separate. I won't have time today to bisect the issue; it seems to go very far back. Here is the Assert that happens with a Debug build because the `result` span is incorrect: ``` blender.exe!_BLI_assert_abort() Line 47 C blender.exe!blender::bke::curves::bezier::evaluate_segment(..., blender::MutableSpan<blender::vec_base<float,3>> result) Line 212 C++ blender.exe!blender::bke::curves::bezier::calculate_evaluated_positions(..., blender::MutableSpan<blender::vec_base<float,3>> evaluated_positions) Line 254 C++ blender.exe!blender::bke::CurvesGeometry::evaluated_positions::__l2::<lambda_1>::()::__l2::<lambda_1>::operator()(blender::IndexRange curves_range) Line 686 C++ blender.exe!blender::threading::parallel_for<``blender::bke::CurvesGeometry::evaluated_positions'::`2'::<lambda_1>::operator()'::`2'::<lambda_1>>(...) Line 72 C++ blender.exe!blender::bke::CurvesGeometry::evaluated_positions::__l2::<lambda_1>::operator()() Line 663 C++ blender.exe!tbb::interface7::internal::delegated_function<`blender::bke::CurvesGeometry::evaluated_positions'::`2'::<lambda_1> const ,void>::operator()() Line 97 C++ ```

Yes, I also received a stack, and because of it I realized that the error is related to the curves in the nodes. But yes, it's not the same mistake. Just a suspicion.

Yes, I also received a stack, and because of it I realized that the error is related to the curves in the nodes. But yes, it's not the same mistake. Just a suspicion.
Author

3.2.1 is broken. 3.1.2 works.

In the 3.2 branch, 95005bbe02 also works.

3.2.1 is broken. 3.1.2 works. In the 3.2 branch, 95005bbe02cf also works.
Member

Added subscribers: @HooglyBoogly, @lichtwerk

Added subscribers: @HooglyBoogly, @lichtwerk
Member

Apparently caused by 2d80f814cc

This is dependent both the specific node setup (mesh-to-curve, set-handle-type, set-spline-resolution [with a value of zero!] all seem to be necessary to trigger the bug) but the input mesh as well (simple plane crashes, but simple cube is fine

Here is a simplified file:
GeomNodesCrash_simplified2.blend

  • open blend
  • Cube with enabled GN modifier
  • Plane with same GN modifier (disabled)
  • enable modifier on Plane >> crash
  • you can also extrude an edge from the Plane prior to enabling the modifier on the Plane >> no crash anymore

@HooglyBoogly : mind checking?

Apparently caused by 2d80f814cc This is dependent both the specific node setup (mesh-to-curve, set-handle-type, set-spline-resolution [with a value of zero!] all seem to be necessary to trigger the bug) but the input mesh as well (simple plane crashes, but simple cube is fine Here is a simplified file: [GeomNodesCrash_simplified2.blend](https://archive.blender.org/developer/F13831865/GeomNodesCrash_simplified2.blend) - open blend - `Cube` with enabled GN modifier - `Plane` with same GN modifier (disabled) - enable modifier on `Plane` >> crash - you can also extrude an edge from the Plane prior to enabling the modifier on the Plane >> no crash anymore @HooglyBoogly : mind checking?
Philipp Oeser changed title from Crash loading geometry nodes from 3.0.0. to Regression: Specific Geometry Nodes tree (involving curve nodes) crashes with specific input mesh 2022-11-01 11:19:53 +01:00

This issue was referenced by 0697631929

This issue was referenced by 0697631929d9ec4be92feae9b8347dd1e32c6ddd
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-11-06 15:37:11 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102144
No description provided.