Fix T102144: missing validation of spline resolution